[project]
name = "agent-05"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Waheed Ahmad", email = "waheedahmad5519@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents>=0.0.14",
]

[project.scripts]
agent-05 = "agent_05:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
